--- a/css/style.css
+++ b/css/style.css
@@ -4,7 +4,20 @@ html, body {
 
 body{
     margin: 0;
+    cursor: none;
 }
+
+/*Custom Cursor*/
+.cursor{
+    position: fixed;
+    width: 50%;
+    height: 50%;
+    background-image: url(../images/blob_cursor_2.png);
+    background-repeat: no-repeat;
+    background-size: 10%;
+
+}
+
 
 p, li, h1 {
     font-family: 'Anton', sans-serif;;
@@ -56,7 +69,7 @@ nav li {
 
 .heroImg {
     display: flex;
-    background-color: cornsilk;
+    /* background-color: cornsilk; */
     align-items: end;
 
 }
@@ -119,12 +132,12 @@ nav li {
     overflow: hidden;
     position: relative;
     cursor: pointer;
-    width: 30%; /* Adjust the width as needed */
+    width: 30%;
     transition: transform 0.3s ease;
   }
   
   .project:hover {
-    transform: scale(1); /* Adjust the scale factor as needed */
+    transform: scale(1);
   }
   
   .project img {
@@ -135,7 +148,7 @@ nav li {
   }
   
   .project:hover img {
-    opacity: 100; /* Adjust the overlay opacity as needed */
+    opacity: 100; 
   }
   
   .project::before {
